--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes">
- 
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Yt"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="insta"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="tt"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="FB"></a>
         </section>
     </main>
 </body>
